// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Reset page > renders correctly 1`] = `
"<section class="max-w-screen-xl mx-auto px-4 md:px-16">
  <h1 class="">Password reset</h1>
  <form>
    <div data-oruga="field" class="o-field"><label class="o-field__label">Password</label>
      <div class="o-field__body">
        <div class="o-field o-field--addons">
          <div data-oruga="input" class="o-input__wrapper o-input__wrapper--expanded o-input__wrapper--has-icon-right"><input aria-required="true" required="" minlength="6" id="bbzt96b4i3d" data-oruga-input="password" type="password" class="o-input o-input--iconspace-right" autocomplete="off">
            <!----><span class="o-icon o-icon--clickable o-input__icon-right" data-oruga="icon"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div>
    <div data-oruga="field" class="o-field"><label class="o-field__label">Password (confirmation)</label>
      <div class="o-field__body">
        <div class="o-field o-field--addons">
          <div data-oruga="input" class="o-input__wrapper o-input__wrapper--expanded o-input__wrapper--has-icon-right"><input aria-required="true" required="" minlength="6" id="r1xm0h8o31r" data-oruga-input="password" type="password" class="o-input o-input--iconspace-right" autocomplete="off">
            <!----><span class="o-icon o-icon--clickable o-input__icon-right" data-oruga="icon"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div><button class="button is-primary">Reset my password</button>
  </form>
</section>"
`;

exports[`Reset page > shows error if token is invalid 1`] = `
"<section class="max-w-screen-xl mx-auto px-4 md:px-16">
  <h1 class="">Password reset</h1>
  <transition-stub name="fade" appear="false" persisted="false" css="true">
    <article title="Error" class="o-notification o-notification--danger o-notification--top" data-oruga="notification">
      <!---->
      <div class="o-notification__wrapper">
        <!---->
        <div class="o-notification__content">The token you provided is invalid.</div>
      </div>
    </article>
  </transition-stub>
  <form>
    <div data-oruga="field" class="o-field o-field--filled"><label class="o-field__label" for="79o2eyzdtga">Password</label>
      <div class="o-field__body">
        <div class="o-field o-field--addons">
          <div data-oruga="input" class="o-input__wrapper o-input__wrapper--expanded o-input__wrapper--has-icon-right"><input aria-required="true" required="" minlength="6" id="79o2eyzdtga" data-oruga-input="password" type="password" class="o-input o-input--iconspace-right" autocomplete="off">
            <!----><span class="o-icon o-icon--clickable o-input__icon-right" data-oruga="icon"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div>
    <div data-oruga="field" class="o-field o-field--filled"><label class="o-field__label" for="b1ke2ycfuh">Password (confirmation)</label>
      <div class="o-field__body">
        <div class="o-field o-field--addons">
          <div data-oruga="input" class="o-input__wrapper o-input__wrapper--expanded o-input__wrapper--has-icon-right"><input aria-required="true" required="" minlength="6" id="b1ke2ycfuh" data-oruga-input="password" type="password" class="o-input o-input--iconspace-right" autocomplete="off">
            <!----><span class="o-icon o-icon--clickable o-input__icon-right" data-oruga="icon"><i class="mdi mdi-eye mdi-24px"></i></span>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </div><button class="button is-primary">Reset my password</button>
  </form>
</section>"
`;
